--- a/TeamHomepage.html
+++ b/TeamHomepage.html
@@ -26,7 +26,7 @@ color: white;
 <div class="header">
 <h1>Michael and Michelle's March Madness</h1>
 </div>
-<p style="font-size:30px"><u>Our Team</u>
+<p style="font-size:30px"><u>Group 12 Members</u>
 <br>
 <p style="font-size:20px"><b>Alex Berk</b>
 <br>
