--- a/ManagementTeam.html
+++ b/ManagementTeam.html
@@ -7,6 +7,7 @@ font-family: Times New roman, sans-serif;
 }
 .header {
 background-color: DodgerBlue;
+font-family: verdana;
 padding: 30px;
 text-align: center;
 font-size: 35px;
@@ -72,7 +73,7 @@ style="width:200px;height:200px;"
 </div>
 </div>
 
-<p style="font-size:20px""font-family:verdana"><b><u>Michael Wu</u></b> - <i>Owner/Operations Manager</i></p>
+<p style="font-size:20px"><b><u>Michael Wu</u></b> - <i>Owner/Operations Manager</i></p>
 <p>Michael’s entrepreneurial spirit is what brought this company to where it is today. He had the tenacity to push through the ups and downs to create a beacon for basketball athletes around the nation. Now, he is in charge of innovating the business further and further to deliver the most value possible to our customers.
 </p>
 <br>
