--- a/nav.html
+++ b/nav.html
@@ -23,11 +23,11 @@ font-size: 30px;
 <body> 
  <nav>
     <ul>
-      <li><a href="aboutus.html" target="main">About Us</a></li>
-      <li><a href="managementteam.html" target="main">Management Team</a></li>
-      <li><a href="products.html" target="main">Our Products</a></li>
-      <li><a href="services.html" target="main">Our Services</a></li>
-      <li><a href="testimonials.html" target="main">Testimonials</a></li>
+      <li><a href="AboutUs.html" target="main">About Us</a></li>
+      <li><a href="ManagementTeam.html" target="main">Management Team</a></li>
+      <li><a href="Products.html" target="main">Our Products</a></li>
+      <li><a href="Services.html" target="main">Our Services</a></li>
+      <li><a href="Testimonials.html" target="main">Testimonials</a></li>
       
     </ul>
   </nav>
