--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,7 @@ font-size: 30px;
 <body> 
  <nav>
     <ul>
-      <li><a href="AboutUs.html" target="main">About Us</a></li>
+      <li><a href="Aboutus.html" target="main">About Us</a></li>
       <li><a href="ManagementTeam.html" target="main">Management Team</a></li>
       <li><a href="Products.html" target="main">Our Products</a></li>
       <li><a href="Services.html" target="main">Our Services</a></li>
