--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <frameset cols="20%,80%">
-<frame name="index" src="Index.html" scrolling="no">
-<frame name="main" src="Teamhomepage.html">
+<frame name="index" src="index.html" scrolling="no">
+<frame name="main" src="TeamHomepage.html">
 </frameset>
