--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <frameset cols="20%,80%">
-<frame name="index" src="index.html" scrolling="no">
+<frame name="nav" src="nav.html" scrolling="no">
 <frame name="main" src="TeamHomepage.html">
 </frameset>
