--- a/Services.html
+++ b/Services.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 
-<h1 style=background-color:DodgerBlue;">Services</h1>
+<h1 style=background-color:DodgerBlue;"
+padding: 30px;
+text-align: center;
+font-size: 35px;
+color: white;
+>Services</h1>
 
 <u><h2 style=color:Orange;">Customer Service</h2></u>
 
